--- a/index.html
+++ b/index.html
@@ -374,6 +374,19 @@
         <source src="music-video-bogey.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
+    <!-- Bogey Music Video Section -->
+<section id="bogey-music-video" style="text-align: center; margin: 50px auto; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
+    <h2 style="color: #FFD700; font-size: 28px; margin-bottom: 10px;">🎬 OUT NOW! Watch the Official Bogey Music Video</h2>
+    <p style="color: #D3D3D3; font-size: 18px;">Watch the full video on X (Twitter) now!</p>
+
+    <!-- Button linking to the music video on X -->
+    <a href="https://x.com/Bogey_TheBandit/status/1891194441576108176" target="_blank"
+       style="display: inline-block; text-decoration: none;">
+        <img src="x-logo.png" alt="Watch on X" 
+             style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(29, 161, 242, 0.5); transition: transform 0.2s ease-in-out;">
+    </a>
+</section>
+
 </section>
         <li><strong>🤝 Phase 5:</strong> Secure strategic partnerships with **top Key Opinion Leaders (KOLs)** and major advertisers to push Bogey’s brand beyond crypto and into mainstream culture. Through influencer collaborations, sponsorships, and viral marketing campaigns, we will position Bogey as **the most recognized meme coin & brand in the space.**</li>
         <li><strong>🔥 Phase 6:</strong> Launch **exclusive BOGEY streetwear & collectibles.**</li>
