--- a/index.html
+++ b/index.html
@@ -188,11 +188,12 @@
                  style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(29, 161, 242, 0.5); transition: transform 0.2s ease-in-out;">
         </a>
 
-        <!-- Telegram Button -->
-        <a href="https://t.me/+Fe4xAbqPThQzMDFk" target="_blank">
-            <img src="Telegram_2019_Logo.svg.png" alt="Join Bogey's Underground Telegram" 
-                 style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(0, 136, 204, 0.5); transition: transform 0.2s ease-in-out;">
-        </a>
+       <!-- Telegram Button -->
+<a href="https://t.me/bogeythebandit" target="_blank">
+    <img src="Telegram_2019_Logo.svg.png" alt="Join Bogey's Underground Telegram" 
+         style="width: 180px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(0, 136, 204, 0.5); transition: transform 0.2s ease-in-out;">
+</a>
+
     </div>
 </div>
 
