--- a/index.html
+++ b/index.html
@@ -355,6 +355,16 @@
     <ul>
         <li><strong>🎤 Phase 1:</strong> Launch Website, Gain First 1,000 Holders, & Go Viral with Memes.</li>
         <img src="bogey-nfts.png" alt="Bogey NFT Collection" style="display: block; margin: 20px auto; width: 80%; max-width: 500px; border-radius: 10px; box-shadow: 0px 4px 10px rgba(255, 215, 0, 0.5);">
+<!-- NFT Collection Section -->
+<section id="nft-collection" style="text-align: center; margin: 40px 0; padding: 20px; background-color: #1a1a1a; border-radius: 10px;">
+    <h2>🎨 Own a Piece of Bogey - NFT Collection</h2>
+    <p style="color: #D3D3D3; font-size: 18px;">Exclusive Bogey The Bandit NFTs available now on SolSea!</p>
+
+    <a href="https://solsea.io/c/67c4596c6448d04526d94974" target="_blank" style="display: inline-block; text-decoration: none;">
+        <img src="nft-icon.png" alt="Bogey NFT Collection on SolSea"
+            style="width: 200px; height: auto; border-radius: 8px; box-shadow: 0px 4px 10px rgba(255, 215, 0, 0.5); transition: transform 0.2s ease-in-out;">
+    </a>
+</section>
 
         <li><strong>🎨 Phase 2:</strong> Drop Exclusive BOGEY NFTs & Expand the Brand.</li>     
         <section id="rapper-video" style="text-align: center; margin: 40px 0;">
